--- a/kapitel/einleitung/einleitung.tex
+++ b/kapitel/einleitung/einleitung.tex
@@ -1,6 +1,6 @@
 \section{Einleitung}
 Diese Arbeit umfasst das Themengebiet rund um die Softwarelösung Kubernetes, welche das Bereitstellen und Pflegen von weiterer Software vereinfacht. 
-Es wird hierbei ein flexibler und skalierbarer Ansatz gewählt der sich von anderen Techniken abhebt.
+Es wird hierbei ein flexibler und skalierbarer Ansatz gewählt, der sich von anderen Techniken abhebt.
 
 \subsection{Aktualität und Relevanz}
 Steigende Nachfrage sorgt für immer neue Herausforderungen in der Art und Weise wie eine App (Applikation) oder Website online bleibt. Wer durch Überlastung offline geht verliert potenzielle Kunden.
@@ -9,24 +9,15 @@ Kubernetes ist das aktuelle Trendthema für Systemintegranten und Infrastrukturb
 ist die Software für viele interessant.
 
 \subsection{Zielsetzung}
-Kubernetes sollte heute an keinem Softwareunternehmen vorbeigehen. Natürlich ist der Aufwand immer dem Nutzen entgegen zu setzen. Mittels dieser Arbeit wird versucht einen Vergleich zu 
+Kubernetes sollte heute an keinem Softwareunternehmen vorbeigehen. Natürlich ist der Aufwand immer dem Nutzen entgegen zu setzen. Mittels dieser Arbeit wird versucht, einen Vergleich zu 
 bestehenden Methoden zu ziehen und einen Ausblick auf die Chancen und Risiken des Einsatzes der Software zu geben.
 
 \subsection{Aufbau der Arbeit}
-TODO
+Um ein Basiswissen zu schaffen wird zuerst ein Beispiel erarbeitet anhand welchem der Leser die Möglichkeit hat weitere Informationen nach zu vollziehen.
+Darauf aufbauend wird auf Probleme oder allgemeine Hürden aufmerksamn gemacht, welche es zu lösen gilt. Die aktuellen Möglichkeiten werden erörtert, um einen Ausblick über 
+die aktuellen Mittel in der Branche zu geben. Dabei werden Positiv- sowie Negativaspekte betrachtet. Daraus resultierend werden Chancen und Risiken der Mittel erörtert und gegeneinander abgewogen.
+Mit einem fundierten Hintergrundwissen kann der Leser nun den Vergleich anhand des am Anfang erörterten Beispiels nachvollziehen und anwenden.
+Das Fazit fasst zusammen, was erarbeitet wurde und gibt einen Anstoß darüber, wie Unternehmen ihre Infrastruktur planen sollten.
 
 \subsection{Hinweise}
 Im weiteren Verlauf dieser Hausarbeit wird aus Gründen der besseren Lesbarkeit das generische Maskulinum verwendet. Weibliche und anderweitige Geschlechteridentitäten werden dabei ausdrücklich mitgemeint, soweit es für die Aussage erforderlich ist.
-
-%  - Einleitung
-%  - Worum geht es (Ist-Situation)
-%  - Warum wird es benötigt (Kubernetes vs. VMs)
-%  - Chancen und Risiken
-%  - Änderung bestehender Prozesse
-%  - Ausgewählte Aspekte (Lösung Vorstellen)
-%  - Umziehen bestehender Infrastruktur
-%  - Enterprise Readiness
-%  - Lösung erklären (Handlungsaspekte)
-%  - Neue Aufgabenverteilung für Admin und Entwickler (Devops)
-%  - Skalierbarkeit
-%  - Fazit 
