--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -11,3 +11,143 @@
 	urltime = {20:30},
 	urldate = {2020-03-23}
 }
+
+@online{website:proxy,
+	usera = {},
+	title = "Was ist ein Reverse Proxy",
+	author = "Wikipedia (2020), Enzyklopädie",
+	url = {https://en.wikipedia.org/wiki/Reverse_proxy},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {19:30},
+	urldate = {2020-03-23}
+}
+
+@online{website:barmetal,
+	usera = {},
+	title = "Was ist ein Bare-Metal Server",
+	author = "Rackspace (2020), Hoster",
+	url = {https://www.rackspace.com/de-de/library/what-is-a-bare-metal-server},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {22:30},
+	urldate = {2020-03-23}
+}
+
+@online{website:container,
+	usera = {},
+	title = "Was ist Containerisierung",
+	author = "Alibaba Cloud (2020), Cloudhosting",
+	url = {https://www.alibabacloud.com/de/knowledge/what-is-containerization},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {22:45},
+	urldate = {2020-03-23}
+}
+
+@online{website:docker,
+	usera = {},
+	title = "Was ist Docker",
+	author = "Opensource (2020), Initiative",
+	url = {https://opensource.com/resources/what-docker},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {23:15},
+	urldate = {2020-03-23}
+}
+
+@online{website:linux,
+	usera = {},
+	title = "Was ist Linux",
+	author = "Wikipedia (2020), Enzyklopädie",
+	url = {https://de.wikipedia.org/wiki/Linux},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {23:30},
+	urldate = {2020-03-23}
+}
+
+@online{website:devops,
+	usera = {},
+	title = "Was ist Devops",
+	author = "Wikipedia (2020), Onlinemedien",
+	url = {https://www.dev-insider.de/was-ist-devops-a-570286/},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-23},
+	urltime = {23:45},
+	urldate = {2020-03-23}
+}
+
+@online{website:kube,
+	usera = {},
+	title = "Kubernetes Homepage",
+	author = "Kubernetes Homepage, Softwarelösung",
+	url = {https://kubernetes.io/de/},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-24},
+	urltime = {17:00},
+	urldate = {2020-03-24}
+}
+
+@online{website:kube-komponenten,
+	usera = {},
+	title = "Kubernetes Komponenten",
+	author = "Kubernetes Website",
+	url = {https://kubernetes.io/de/docs/concepts/overview/components/},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-24},
+	urltime = {17:30},
+	urldate = {2020-03-24}
+}
+
+@online{website:kube-svc,
+	usera = {},
+	title = "Kubernetes Service",
+	author = "Kubernetes Website",
+	url = {https://kubernetes.io/docs/concepts/services-networking/service/},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-24},
+	urltime = {17:30},
+	urldate = {2020-03-24}
+}
+
+@online{website:kube-pod,
+	usera = {},
+	title = "Kubernetes Pod (Container)",
+	author = "Kubernetes Website",
+	url = {https://kubernetes.io/docs/concepts/workloads/pods/pod/},
+	%Daten für den alten Stil
+	%year = "2014",
+	%note = "05.04.2015, 19:25",
+	%Daten für neuen 2018er Stil
+	date = {2020-03-24},
+	urltime = {18:00},
+	urldate = {2020-03-24}
+}
