--- a/literatur/literatur.bib
+++ b/literatur/literatur.bib
@@ -26,7 +26,7 @@
 	urldate = {2020-03-23}
 }
 
-@online{website:barmetal,
+@online{website:baremetal,
 	usera = {},
 	title = "Was ist ein Bare-Metal Server",
 	author = "Rackspace (2020), Hoster",
